feat: implement security, websocket configuration, and administrative management endpoints